# ChangeLog for x11-proto/inputproto
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.118 2011/07/30 11:17:55 armin76 Exp $

  30 Jul 2011; Raúl Porcel <armin76@gentoo.org> inputproto-2.0.2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #371857

  29 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> inputproto-2.0.2.ebuild:
  ppc64 stable wrt #371857

  13 Jul 2011; Markus Meier <maekke@gentoo.org> inputproto-2.0.2.ebuild:
  x86 stable, bug #371857

  28 Jun 2011; Brent Baude <ranger@gentoo.org> inputproto-2.0.2.ebuild:
  Marking inputproto-2.0.2 ppc stable for bug 371857

  26 Jun 2011; Markus Meier <maekke@gentoo.org> inputproto-2.0.2.ebuild:
  arm stable, bug #371857

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> inputproto-2.0.2.ebuild:
  Stable on amd64 wrt bug #372333

*inputproto-2.0.2 (08 Jun 2011)

  08 Jun 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +inputproto-2.0.2.ebuild:
  Version bump.

  18 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -inputproto-2.0.ebuild:
  old

  15 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> inputproto-2.0.1.ebuild:
  ppc stable wrt #359059

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> inputproto-2.0.1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #344827

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> inputproto-2.0.1.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> inputproto-2.0.1.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  inputproto-2.0.1.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> inputproto-2.0.1.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> inputproto-2.0.1.ebuild:
  ppc64 stable wrt #344827

*inputproto-2.0.1 (11 Nov 2010)

  11 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +inputproto-2.0.1.ebuild:
  Version bump
