@@ -1,13 +1,13 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/resourceproto/resourceproto-1.2.0.ebuild,v 1.7 2011/07/30 11:19:17 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/resourceproto/resourceproto-1.2.0.ebuild,v 1.8 2011/08/20 15:55:26 jer Exp $
 
 EAPI=4
 inherit xorg-2
 
 DESCRIPTION="X.Org Resource protocol headers"
 
-KEYWORDS="alpha amd64 arm ~hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
 RDEPEND=""
